added code to check frequency of answers

--- a/form/index.html
+++ b/form/index.html
@@ -23,6 +23,7 @@
             <button id="answer6" data-class="6">Answer 6</button>
             <button id="answer7" data-class="7">Answer 7</button>
             <button id="answer8" data-class="8">Answer 8</button>
+            <button id="answer9" data-class="8">Answer 9</button>
         </div>
         <!-- Start quiz button -->
         <button id="startquiz">Start Quiz</button>
